Mejoramiento de Pagina

--- a/index.html
+++ b/index.html
@@ -8,26 +8,43 @@
     <meta name="viewport" content="width=device-width">
     <title>Tienda Ropa</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-home.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
-
 </head>  
 
+
 <body>
-
     <header>
-        
         <div class="caja">
-
-           <h1><img src="" alt=""></h1>
-               <nav>
+            <h1><img src="ruta-al-logo.png" alt="Logo de la tienda"></h1>
+            <nav>
                 <ul>
-               <li><a href="index.html">Home</a></li>
-               <li><a href="Productos.html">Productos</a></li>
-               <li><a href="contacto.html">Contacto</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="Productos.html">Productos</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </nav>
+        </div>    
+    </header>
 
-   </div>    
+    <div class="ropa-wrapper">
+        <a href="Productos.html">
+            <div class="item" style="background-image: url('diferenciales/image0_0\ \(1\).jpg');"></div>
+        </a>
+        <a href="Productos.html">
+            <div class="item" style="background-image: url('diferenciales/You\ can\ create\ \ c5113e2b-41aa-4776-9d4f-338220e57e5c.png');"></div>
+        </a>
+        <a href="Productos.html">
+            <div class="item" style="background-image: url('diferenciales/image0_0.jpg');"></div>
+        </a>
+        <a href="Productos.html">
+            <div class="item" style="background-image: url('diferenciales/image1_0.jpg');"></div>
+        </a>
+    </div>
 
-   </header>
+    <footer>
+        <p>&copy; 2024 Tienda de Ropa. Todos los derechos reservados.</p>
+    </footer>
+</body>
+</html>
+
