--- a/Productos.html
+++ b/Productos.html
@@ -2,14 +2,14 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Productos - Tienda de Ropa</title>
+    <title>Productos - Couture Corner</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <header>
         <div class="caja">
-            <h1><img src="imagenes/logo-blanco.png" alt="Logo"></h1>
+            <h1><img src="banner/WhatsApp Image 2024-03-17 at 9.38.58 PM.jpeg" alt="Logo" class="logo"></h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -153,7 +153,7 @@
 
     <footer>
         <img src="imagenes/logo-blanco.png" alt="Logo">
-        <p>&copy; Copyright Tienda de Ropa - 2024</p>
+        <p>&copy; Copyright Couture Corner - 2024</p>
     </footer>
     
     <script src="script.js"></script>
