--- a/index.html
+++ b/index.html
@@ -6,17 +6,22 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title>Tienda Ropa</title>
+    <title>Couture Corner</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style-home.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
+
 </head>  
 
 
 <body>
     <header>
         <div class="caja">
-            <h1><img src="ruta-al-logo.png" alt="Logo de la tienda"></h1>
+            <h1><img src="banner/WhatsApp Image 2024-03-17 at 9.38.58 PM.jpeg" alt="Logo de la tienda" class="logo"></h1>
+
+            <h1 class="titulo-principal">Couture Corner</h1>
+
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -43,7 +48,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 Tienda de Ropa. Todos los derechos reservados.</p>
+        <p>&copy; 2024 Couture Corner. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
